Config parser seems to be working on a basic test case.